# hyperdrc

./: Cargo.toml  README.md
benches/: README.md  fixture_smoke.rs  parser_geometry_smoke.rs
docs/: README.md  design-readiness-plan.md  testing.md
examples/: README.md  hyperdrc-config.json
proptest-regressions/: README.md  excellon.txt  ipc356.txt
src/: README.md  app.rs  arrow_report.rs  assembly_policy.rs  baseline.rs  cli.rs  config.rs  constraint_policy.rs  conversion.rs  date.rs  dxf_overlay.rs  excellon.rs  excellon_overlay.rs  gencad_review.rs  geometry.rs  gerber_metadata.rs  gerber_overlay.rs  github_annotations.rs  html_report.rs  io.rs  ipc2581_review.rs  ipc356.rs  ipc356_review.rs  jsonl.rs  junit.rs  kicad.rs  kicad_dru.rs  kicad_markers.rs  lib.rs  main.rs  package_archive.rs  package_policy.rs  parquet_report.rs  pdf_overlay.rs  process_lifecycle.rs  report.rs  sarif.rs  sexp.rs  sqlite_report.rs  svg_overlay.rs  (+1 more)
src/checks/: README.md  artifact_handoff.rs  artifact_table.rs  artifacts.rs  assembly.rs  board.rs  constraints.rs  continuity.rs  dense_pad.rs  differential.rs  distance.rs  drill.rs  excellon.rs  impedance.rs  layer.rs  manifest.rs  mechanical.rs  mod.rs  net_class.rs  net_scope.rs  outline.rs  power.rs  power_integrity.rs  return_path.rs  rf.rs  safety.rs  signal.rs  spatial.rs  spread.rs  stencil.rs  surface_finish.rs  thermal.rs
src/geometry/: README.md  primitives.rs  sketch.rs  source_units.rs  violations.rs
src/kicad/: README.md  arcs.rs  custom_pad.rs  footprint_graphics.rs  graphic_primitives.rs  graphics.rs  model.rs  text.rs
