[package]
name = "hyperdrc"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
description = "Command line design readiness checks for printed circuit board Gerber files"
readme = "README.md"
repository = "https://github.com/timschmidt/hyperdrc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["pcb", "drc", "dfm", "gerber", "kicad"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csgrs = { git = "https://github.com/timschmidt/csgrs", default-features = false, features = ["f64", "sketch", "gerber-io", "offset", "delaunay"] }
geo = { version = "0.29.3", default-features = false }
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.6"

[[bench]]
name = "parser_geometry_smoke"
harness = false

[[bench]]
name = "fixture_smoke"
harness = false
