[package]
name = "hyperdrc"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
description = "Command line design readiness checks for printed circuit board Gerber files"
readme = "README.md"
repository = "https://github.com/timschmidt/hyperdrc"
categories = ["command-line-utilities", "development-tools"]
keywords = ["pcb", "drc", "dfm", "gerber", "kicad"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
arrow-array = "57.3.0"
arrow-ipc = "57.3.0"
arrow-schema = "57.3.0"
clap = { version = "4.5", features = ["derive"] }
csgrs = { path = "../csgrs", version = "0.21.0", default-features = false, features = ["sketch", "gerber-io", "offset"] }
flate2 = "1.0"
geo = { version = "0.31.0", default-features = false }
hyperlimit = { path = "../hyperlimit", version = "0.2.0", default-features = false, features = ["std"] }
hyperreal = { path = "../hyperreal", version = "0.11.1" }
log = "0.4"
libc = "0.2"
parquet = { version = "57.3.1", default-features = false, features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
calamine = "0.35.0"
quick-xml = "0.39.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[dev-dependencies]
proptest = "1.6"

[[bench]]
name = "parser_geometry_smoke"
harness = false

[[bench]]
name = "fixture_smoke"
harness = false
